[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-router"
version = "0.1.0"
description = "Route inbound context to agent + session scope via fnmatch binding rules"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Masterplanner25" }]
dependencies = ["nodus-session>=0.1.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nodus_router*"]