[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-router"
version = "0.1.0"
description = "Route inbound context to agent + session scope via fnmatch binding rules"
authors = [{ name = "Shawn Knight" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
session = ["nodus-session>=0.1.0"]
dev     = ["pytest>=8.0", "nodus-session>=0.1.0"]

[project.urls]
Homepage = "https://github.com/Masterplanner25/nodus-router"
Repository = "https://github.com/Masterplanner25/nodus-router"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodus_router*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
